deployments/k8s/staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gauth-staging
  labels:
    name: gauth-staging
    environment: staging
    app: gauth
    managed-by: kubectl
